css/style.css
* {
  margin: 0;
  font-family: "Lato", sans-serif;
}

a {
  color: #ffffff;
  text-decoration: none;  
  text-transform: uppercase;
}

body {
  min-width: 1020px;
}

.top {
  position:fixed;
  width: 100%;
  height: 95px;
  z-index:1;  
  box-sizing: border-box;
  border-bottom: 6px solid #323746;
  background-color: #2d303a;  
}

.wrapper {
  max-width: 1020px;
  padding: 0 40px;
  margin: 0 auto;
  box-sizing: border-box;
}

.top .wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 100%;  
}

.logo-icon {
  font-size: 25px;
  letter-spacing: -0.7px;
}

.logo-icon:after {
  content: "*";
  color: #f06c64;
}

.navigation {
  display: flex;
  padding-top: 11px;
  font-size: 12px;
  line-height: 12px;
  font-weight: bold; 
}

.navigation-item {
  position: relative;
  height: 30px;
  margin-left: 28px;
  margin-top: 18px;
}

.navigation-item:not(:last-child):after {
  position: absolute;
  right: -15px;
  content: "\00B7"; 
  color: #494e62;
}

.navigation-item-link:hover,
.navigation-item-link-selected
 {
  color: #f06c64;
}

.section-slider {
  height: 695px;
  box-sizing: border-box;
  border-bottom: 5px solid #ea676b;
  background-color: #f06c64;  
}

.slider {
  position: relative;
}

.left-arrow{
  position: absolute;
  top: 375px;
  cursor: pointer;
}

.vertical-Phone {
  position: absolute;
  left: 70px;
  top: 79px;
}

.horizontal-Pnone {
  position: relative;
  left: 320px;
  top: 165px;
}

.right-arrow {
  position: absolute;
  top: 378px;
  right: 0px;
  cursor: pointer;
}

.section-services {
  height: 501px;
  padding-top: 62px;
  box-sizing: border-box;
  border-bottom: 6px solid #ffffff;
  padding-bottom: 48px;
  background-color: #f2f2f2;  
}

.services-items {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 20px;
  row-gap: 20px;
  padding-top: 36px;
}

.services-item {
  position: relative;
  overflow: hidden;
  padding-left: 80px;
  height: 103px;
}

.services-ellipse-border {
  position: absolute;
  left: 0;
  width: 59px;
  height: 59px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  border: 2px solid #666D89;
  border-radius: 29px; 
}

.services-item-title {
  display: block;
  padding-bottom: 7px;
  line-height: 18px;
  font-size: 18px;  
  font-weight: 900;
  color: #666d89;
}

.services-item-description {
  display: block;
  line-height: 22px;
  font-size: 12px; 
  text-align: justify;
  color: #767e9e;   
}

.portfolio {
  padding-bottom: 67px;
  border-bottom: 6px solid #323746;
  background-color: #2d303a;  
}

.section {
  padding-top: 62px;
}

.title-color {
  color: #666d89;
}

.section-header {
  padding-bottom: 11px;
  line-height: 30px;
}

.section-title {
  padding-bottom: 21px;
  font-size: 30px;  
  font-weight: 900;
}

.section-description {
  font-size: 18px;
  font-weight: 300;
}

.description-color {
  color: #767e9e;
}

.portfolio-filter {
  display: flex;
}

.filter-input-button {
  margin-right: 10px;
  border: 1px solid rgb(100, 110, 140);
  border-radius: 5px;
  line-height: 18px;
  font-size: 12px;
  color: #767e9e; 
  cursor: pointer;
  background-color: transparent;  
}

.filter-input-button:hover {
  background-color: #ffff;
  color: rgb(100, 110, 140);
  border-color: #ffff;
}

.filter-selected-input {
  border-color: rgb(200, 200, 200);
  color: #ffff;
}

.portfolio-items {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: 20px; 
  overflow: hidden;
  margin-top: 19px;
}

.portfolio-image {
  display: block;
}

.about-us {
  padding-bottom: 67px;
  border-bottom: 6px solid #ffffff;
  background-color: #f2f2f2;
}

.persons {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
  padding: 0;
  margin-top: 34px;
}

.person {
  height: 443px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.person-image {
  width: 300px;
  height: 300px;
}

.person-name {
  height: 18px;
  padding-top: 6px;
  overflow: hidden;
  font-size: 18px;
  line-height: 18px;
  font-weight: 900;
  color: #666d89;    
}

.person-description {
  padding-bottom: 13px;
  font-size: 12px;
  line-height: 22px;
  color: #767e9e;  
}

.social-media-icons {
  display: flex;
}

.social-media-icon {
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  margin-right: 8px;
  border: 1px solid #666d89;
  border-radius: 29px; 
}

.social-media-icon:hover {
  background-color: #ffff;
}

.quote {
  padding-bottom: 13px;
  background-color: #f06c64;
  border-bottom: 6px solid #ea676b; 
}

.quote-header-text-color {
  color:#f0d8d9;
}

.quote-form-section {
  margin-top: 33px;
}

.centering {
  display: flex;
  justify-content: space-between;
  flex-shrink: 0;
}

.quote-form {
  display: flex;
  flex-direction: column;
  width: 620px;
}

.input-text {
  height: 38px;
  max-width: 100%;
  min-width: 100%;
  margin-bottom: 16px;
  padding-left: 15px;
  box-sizing: border-box;
  outline: none;
  resize: none;
  border: none;
  border-radius: 4px;
  background-color: #d6564f; 
  font-size: 12px;
  line-height: 12px;
  color: #f48c8f; 
  transition: background-color .27s ease-out,
  box-shadow 0.27s ease-out; 
}

.input-text:hover {
  background-color: #bd4c46;
  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
}

.input-text:focus {
  background-color: #ffffff;
  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
  color: #000000;
}

.input-text.details {
  height: 202px;
  padding-top: 12px;
}

.input-text::placeholder {
  color: #f48c8f;
}

.submit-button {
  height: 38px;
  width: 100px;
  outline: none;
  border: none;
  background-color: #d6564f;
  border-radius: 4px;
  cursor: pointer;
  font-weight: bold;
  text-transform: uppercase;
  color: #f0d8d9;
  transition: background-color .27s ease-out, box-shadow 0.27s ease-out;
}

.submit-button:hover {
  background-color: #bd4c46;
  box-shadow: 0px 0px 7px -1px rgba(0,0,0,0.39);
}

.contact-information {
  width: 300px;
  color: #f0d8d9;
}

.contact-information-header {
  margin-bottom: 10px;
  font-size: 18px;
  font-weight: 900;
  line-height: 18px;  
}

.contact-information-description {
  margin-bottom: 29px;
  font-size: 12px;
  line-height: 22px;  
}

.contact {
  position: relative;
  display: block;
  margin-bottom: 9.5px;
  padding-left: 23px;
  font-size: 12px;
  line-height: 12px;  
  color: #f0d8d9;
  text-decoration: none;
}

.contact::before {
  position: absolute;
  left: 0;
  width: 13px;
  height: 12px;
  display: block;
  content: "";  
  background-repeat: no-repeat;
}

.location:before {
  background-image: url("../assets/location.png");
  background-size: 7px;
  background-position: 3px;
}

.contact-tel:before {
  background-image: url("../assets/phone-icon.png");
  background-size: 11px;
  background-position: 1px;
}

.contact-email:before {
  background-image: url("../assets/mail.png");
  background-size: 13px;
  background-position: 1px;
}

.bottom {
  height: 76px;
  background-color: #2d303a;  
}

.copyright {
  margin-top: 32px;
  font-size: 12px;
  color: #666d89;
}

.footer-social-media-icons {
  margin-top: 20px;
}

